Fixed toolbar items spacing

--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -226,7 +226,7 @@ svg.wire path {
   height: 80px;
   border-radius: 0.75em;
   border: 0.2rem solid rgb(98, 178, 235);
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0.5rem;
   font-weight: bold;
   font-size: 0.8rem;
   text-align: center;
